@@ -12,56 +12,44 @@ import java.io.File;
 import java.io.FileInputStream;
 import java.io.FileOutputStream;
 import java.io.IOException;
-import java.net.MalformedURLException;
-import java.net.URL;
-import java.util.Date;
 import java.util.HashMap;
-import java.util.List;
 
 import org.appcelerator.kroll.KrollDict;
 import org.appcelerator.kroll.KrollFunction;
 import org.appcelerator.kroll.KrollModule;
-import org.appcelerator.kroll.KrollObject;
-import org.appcelerator.kroll.KrollRuntime;
 import org.appcelerator.kroll.annotations.Kroll;
 import org.appcelerator.kroll.common.Log;
 import org.appcelerator.titanium.ContextSpecific;
 import org.appcelerator.titanium.TiApplication;
-import org.appcelerator.titanium.TiBaseActivity;
 import org.appcelerator.titanium.TiBlob;
 import org.appcelerator.titanium.TiC;
 import org.appcelerator.titanium.TiContext;
+import org.appcelerator.titanium.TiFileProxy;
 import org.appcelerator.titanium.io.TiBaseFile;
+import org.appcelerator.titanium.io.TiFile;
 import org.appcelerator.titanium.io.TiFileFactory;
 import org.appcelerator.titanium.proxy.TiViewProxy;
 import org.appcelerator.titanium.util.TiActivityResultHandler;
 import org.appcelerator.titanium.util.TiActivitySupport;
-import org.appcelerator.titanium.util.TiConvert;
 import org.appcelerator.titanium.util.TiFileHelper;
 import org.appcelerator.titanium.util.TiIntentWrapper;
+import org.appcelerator.titanium.util.TiMimeTypeHelper;
 import org.appcelerator.titanium.util.TiUIHelper;
 
-import ti.modules.titanium.media.android.AndroidModule.MediaScannerClient;
-import android.annotation.SuppressLint;
 import android.app.Activity;
-import android.content.ContentValues;
 import android.content.Context;
 import android.content.Intent;
-import android.content.pm.PackageManager;
-import android.content.pm.ResolveInfo;
 import android.database.Cursor;
+import android.graphics.Bitmap;
 import android.graphics.BitmapFactory;
 import android.hardware.Camera;
 import android.hardware.Camera.CameraInfo;
 import android.net.Uri;
-import android.os.Build;
 import android.os.Environment;
 import android.os.Handler;
 import android.os.Message;
 import android.os.Vibrator;
 import android.provider.MediaStore;
-import android.provider.MediaStore.Images;
-import android.provider.MediaStore.MediaColumns;
 import android.view.Window;
 
 @Kroll.module @ContextSpecific
@@ -71,13 +59,13 @@ public class MediaModule extends KrollModule
 	private static final String TAG = "TiMedia";
 
 	private static final long[] DEFAULT_VIBRATE_PATTERN = { 100L, 250L };
-	private static final String PHOTO_DCIM_CAMERA = "/sdcard/dcim/Camera";
-
-	protected static final int MSG_INVOKE_CALLBACK = KrollModule.MSG_LAST_ID + 100;
-	protected static final int MSG_LAST_ID = MSG_INVOKE_CALLBACK;
 
 	// The mode FOCUS_MODE_CONTINUOUS_PICTURE is added in API 14
-	public static final String FOCUS_MODE_CONTINUOUS_PICTURE = "continuous-picture";
+	protected static final String FOCUS_MODE_CONTINUOUS_PICTURE = "continuous-picture";
+	protected static final String PROP_AUTOHIDE = "autohide";
+	protected static final String PROP_AUTOSAVE = "saveToPhotoGallery";
+	protected static final String PROP_WHICH_CAMERA = "whichCamera";
+	protected static final String PROP_OVERLAY = "overlay";
 
 	@Kroll.constant public static final int UNKNOWN_ERROR = -1;
 	@Kroll.constant public static final int NO_ERROR = 0;
@@ -142,219 +130,286 @@ public class MediaModule extends KrollModule
 			vibrator.vibrate(pattern, -1);
 		}
 	}
-
-	@Kroll.method
-	public void showCamera(@SuppressWarnings("rawtypes") HashMap options)
+	
+	private int getLastImageId(Activity activity){
+	    final String[] imageColumns = { MediaStore.Images.Media._ID };
+	    final String imageOrderBy = MediaStore.Images.Media._ID+" DESC";
+	    final String imageWhere = null;
+	    final String[] imageArguments = null;
+	    
+	    Cursor imageCursor = activity.getContentResolver().query(MediaStore.Images.Media.EXTERNAL_CONTENT_URI, imageColumns, imageWhere, imageArguments, imageOrderBy);
+	    if (imageCursor == null) {
+	    	return -1;
+	    }
+	    if (imageCursor.moveToFirst()){
+	        int id = imageCursor.getInt(imageCursor.getColumnIndex(MediaStore.Images.Media._ID));
+	        imageCursor.close();
+	        return id;
+	    }else{
+	        return 0;
+	    }
+	}
+	
+	private void launchNativeCamera(KrollDict cameraOptions)
 	{
-		Activity activity = TiApplication.getInstance().getCurrentActivity();
-
-		Log.d(TAG, "showCamera called", Log.DEBUG_MODE);
-
 		KrollFunction successCallback = null;
 		KrollFunction cancelCallback = null;
 		KrollFunction errorCallback = null;
-		boolean autohide = true;
-		int flashMode = CAMERA_FLASH_OFF;
 		boolean saveToPhotoGallery = false;
-
-		if (options.containsKey("success")) {
-			successCallback = (KrollFunction) options.get("success");
+		
+		if (cameraOptions.containsKeyAndNotNull(TiC.PROPERTY_SUCCESS)) {
+			successCallback = (KrollFunction) cameraOptions.get(TiC.PROPERTY_SUCCESS);
 		}
-		if (options.containsKey("cancel")) {
-			cancelCallback = (KrollFunction) options.get("cancel");
+		if (cameraOptions.containsKeyAndNotNull(TiC.PROPERTY_CANCEL)) {
+			cancelCallback = (KrollFunction) cameraOptions.get(TiC.PROPERTY_CANCEL);
 		}
-		if (options.containsKey("error")) {
-			errorCallback = (KrollFunction) options.get("error");
+		if (cameraOptions.containsKeyAndNotNull(TiC.EVENT_ERROR)) {
+			errorCallback = (KrollFunction) cameraOptions.get(TiC.EVENT_ERROR);
 		}
-
-		Object autohideOption = options.get("autohide");
-		if (autohideOption != null) {
-			autohide = TiConvert.toBoolean(autohideOption);
-		}
-
-		Object saveToPhotoGalleryOption = options.get("saveToPhotoGallery");
-		if (saveToPhotoGalleryOption != null) {
-			saveToPhotoGallery = TiConvert.toBoolean(saveToPhotoGalleryOption);
+		if (cameraOptions.containsKeyAndNotNull("saveToPhotoGallery")) {
+			saveToPhotoGallery = cameraOptions.getBoolean("saveToPhotoGallery");
 		}
 		
-		Object cameraFlashModeOption = options.get(TiC.PROPERTY_CAMERA_FLASH_MODE);
-		if (cameraFlashModeOption != null) {
-			flashMode = TiConvert.toInt(cameraFlashModeOption);
-		}
-
-		// Use our own custom camera activity when an overlay is provided.
-		if (options.containsKey("overlay")) {
-			TiCameraActivity.overlayProxy = (TiViewProxy) options
-					.get("overlay");
-
-			TiCameraActivity.callbackContext = getKrollObject();
-			TiCameraActivity.successCallback = successCallback;
-			TiCameraActivity.errorCallback = errorCallback;
-			TiCameraActivity.cancelCallback = cancelCallback;
-			TiCameraActivity.saveToPhotoGallery = saveToPhotoGallery;
-			TiCameraActivity.setFlashMode(flashMode);
-			TiCameraActivity.whichCamera = CAMERA_REAR; // default.
-
-			// This option is only applicable when running the custom
-			// TiCameraActivity, since we can't direct the built-in
-			// Activity to open a specific camera.
-			Object whichCamera = options.get("whichCamera");
-			if (whichCamera != null) {
-				TiCameraActivity.whichCamera = TiConvert.toInt(whichCamera);
-			}
-			TiCameraActivity.autohide = autohide;
-
-			Intent intent = new Intent(activity, TiCameraActivity.class);
-			activity.startActivity(intent);
-			return;
-		}
-
-		Camera camera = null;
-		try {
-			camera = Camera.open();
-			if (camera != null) {
-				camera.release();
-				camera = null;
-			}
-
-		} catch (Throwable t) {
-			if (camera != null) {
-				camera.release();
-			}
-
-			if (errorCallback != null) {
-				errorCallback.call(
-						getKrollObject(),
-						new Object[] { createErrorResponse(NO_CAMERA,
-								"Camera not available.") });
-			}
-
-			return;
-		}
-
-		TiActivitySupport activitySupport = (TiActivitySupport) activity;
-		TiFileHelper tfh = TiFileHelper.getInstance();
-
-		TiIntentWrapper cameraIntent = new TiIntentWrapper(new Intent());
-		if (TiCameraActivity.overlayProxy == null) {
-			cameraIntent.getIntent().setAction(
-					MediaStore.ACTION_IMAGE_CAPTURE);
-			cameraIntent.getIntent().addCategory(Intent.CATEGORY_DEFAULT);
-		} else {
-			cameraIntent.getIntent().setClass(
-					TiApplication.getInstance().getBaseContext(),
-					TiCameraActivity.class);
-		}
-
-		cameraIntent.setWindowId(TiIntentWrapper.createActivityName("CAMERA"));
-		PackageManager pm = (PackageManager) activity.getPackageManager();
-		List<ResolveInfo> activities = pm.queryIntentActivities(
-				cameraIntent.getIntent(), PackageManager.MATCH_DEFAULT_ONLY);
-
-		// See if it's the HTC camera app
-		boolean isHTCCameraApp = false;
-
-		for (ResolveInfo rs : activities) {
-			try {
-				if (rs.activityInfo.applicationInfo.sourceDir.contains("HTC")
-						|| Build.MANUFACTURER.equals("HTC")) {
-					isHTCCameraApp = true;
-					break;
-				}
-			} catch (NullPointerException e) {
-				// Ignore
-			}
-		}
-
-		File imageDir = null;
+		
+		//Create an output file irrespective of whether saveToGallery 
+		//is true or false. If false, we'll delete it later
 		File imageFile = null;
-
-		try {
-			if (saveToPhotoGallery) {
-				// HTC camera application will create its own gallery image
-				// file.
-				if (!isHTCCameraApp) {
-					imageFile = createGalleryImageFile();
-				}
-
-			} else {
-				if (activity.getIntent() != null) {
-					String name = TiApplication.getInstance().getAppInfo()
-							.getName();
-					// For HTC cameras, specifying the directory from
-					// getExternalStorageDirectory is /mnt/sdcard and
-					// using that path prevents the gallery from recognizing it.
-					// To avoid this we use /sdcard instead
-					// (this is a legacy path we've been using)
-					if (isHTCCameraApp) {
-						imageDir = new File(PHOTO_DCIM_CAMERA, name);
-					} else {
-						File rootsd = Environment.getExternalStorageDirectory();
-						imageDir = new File(rootsd.getAbsolutePath()
-								+ "/dcim/Camera/", name);
-					}
-					if (!imageDir.exists()) {
-						imageDir.mkdirs();
-						if (!imageDir.exists()) {
-							Log.w(TAG,
-									"Attempt to create '"
-											+ imageDir.getAbsolutePath()
-											+ "' failed silently.");
-						}
-					}
-
-				} else {
-					imageDir = tfh.getDataDirectory(false);
-				}
-
-				imageFile = tfh.getTempFile(imageDir, ".jpg", true);
-			}
-
-		} catch (IOException e) {
-			Log.e(TAG, "Unable to create temp file", e);
+		
+		if (saveToPhotoGallery) {
+			imageFile = MediaModule.createGalleryImageFile();
+		} else {
+			imageFile = MediaModule.createExternalStorageFile();
+		}
+		
+		//Sanity Checks
+		if (imageFile == null) {
 			if (errorCallback != null) {
-				errorCallback.callAsync(getKrollObject(),
-						createErrorResponse(UNKNOWN_ERROR, e.getMessage()));
+				KrollDict response = new KrollDict();
+				response.putCodeAndMessage(NO_CAMERA, "Unable to create file for storage");
+				errorCallback.callAsync(getKrollObject(), response);
 			}
-
 			return;
 		}
-
-		// Get the taken date for the last image in EXTERNAL_CONTENT_URI.
-		String[] projection = {
-			Images.ImageColumns.DATE_TAKEN
-		};
-		String dateTaken = null;
-		Cursor c = activity.getContentResolver().query(Images.Media.EXTERNAL_CONTENT_URI, projection, null, null,
-				Images.ImageColumns.DATE_TAKEN);
-		if (c != null) {
-			if (c.moveToLast()) {
-				dateTaken = c.getString(0);
+		
+		if (getIsCameraSupported() == false) {
+			if (errorCallback != null) {
+				KrollDict response = new KrollDict();
+				response.putCodeAndMessage(UNKNOWN_ERROR, "Camera Not Supported");
+				errorCallback.callAsync(getKrollObject(), response);
 			}
-			c.close();
-			c = null;
+			Log.e(TAG, "Camera not supported");
+			imageFile.delete();
+			return;
 		}
+		
+		//Create Intent
+		Uri fileUri = Uri.fromFile(imageFile); // create a file to save the image
+		Intent intent = new Intent(MediaStore.ACTION_IMAGE_CAPTURE);
+		intent.putExtra(MediaStore.EXTRA_OUTPUT, fileUri);
+		
+		//Setup CameraResultHandler
+		Activity activity = TiApplication.getInstance().getCurrentActivity();
+		TiActivitySupport activitySupport = (TiActivitySupport) activity;
 
 		CameraResultHandler resultHandler = new CameraResultHandler();
 		resultHandler.imageFile = imageFile;
-		resultHandler.saveToPhotoGallery = saveToPhotoGallery;
 		resultHandler.successCallback = successCallback;
-		resultHandler.cancelCallback = cancelCallback;
 		resultHandler.errorCallback = errorCallback;
+		resultHandler.cancelCallback = cancelCallback;
+		resultHandler.cameraIntent = intent;
+		resultHandler.saveToPhotoGallery = saveToPhotoGallery;
 		resultHandler.activitySupport = activitySupport;
-		resultHandler.cameraIntent = cameraIntent.getIntent();
-		resultHandler.dateTaken_lastImageInExternalContentURI = dateTaken;
-
-		if (imageFile != null) {
-			String imageUrl = "file://" + imageFile.getAbsolutePath();
-			cameraIntent.getIntent().putExtra(MediaStore.EXTRA_OUTPUT,
-					Uri.parse(imageUrl));
-			resultHandler.imageUrl = imageUrl;
-		}
-
+		resultHandler.lastImageId = getLastImageId(activity);
 		activity.runOnUiThread(resultHandler);
+		
+		
+	}
+	
+	
+	private void launchCameraActivity(KrollDict cameraOptions, TiViewProxy overLayProxy) {
+		KrollFunction successCallback = null;
+		KrollFunction cancelCallback = null;
+		KrollFunction errorCallback = null;
+		boolean saveToPhotoGallery = false;
+		boolean autohide = true;
+		
+		int flashMode = CAMERA_FLASH_OFF;
+		int whichCamera = CAMERA_REAR;
+		
+		if (cameraOptions.containsKeyAndNotNull(TiC.PROPERTY_SUCCESS)) {
+			successCallback = (KrollFunction) cameraOptions.get(TiC.PROPERTY_SUCCESS);
+		}
+		if (cameraOptions.containsKeyAndNotNull(TiC.PROPERTY_CANCEL)) {
+			cancelCallback = (KrollFunction) cameraOptions.get(TiC.PROPERTY_CANCEL);
+		}
+		if (cameraOptions.containsKeyAndNotNull(TiC.EVENT_ERROR)) {
+			errorCallback = (KrollFunction) cameraOptions.get(TiC.EVENT_ERROR);
+		}
+		if (cameraOptions.containsKeyAndNotNull(PROP_AUTOSAVE)) {
+			saveToPhotoGallery = cameraOptions.getBoolean(PROP_AUTOSAVE);
+		}
+		if (cameraOptions.containsKeyAndNotNull(PROP_AUTOHIDE)) {
+			autohide = cameraOptions.getBoolean(PROP_AUTOHIDE);
+		}
+		if (cameraOptions.containsKeyAndNotNull(TiC.PROPERTY_CAMERA_FLASH_MODE)) {
+			flashMode = cameraOptions.getInt(TiC.PROPERTY_CAMERA_FLASH_MODE);
+		}
+		if (cameraOptions.containsKeyAndNotNull(PROP_WHICH_CAMERA)) {
+			whichCamera = cameraOptions.getInt(PROP_WHICH_CAMERA);
+		}
+		
+		TiCameraActivity.callbackContext = getKrollObject();
+		TiCameraActivity.successCallback = successCallback;
+		TiCameraActivity.cancelCallback = cancelCallback;
+		TiCameraActivity.errorCallback = errorCallback;
+		TiCameraActivity.saveToPhotoGallery = saveToPhotoGallery;
+		TiCameraActivity.autohide = autohide;
+		TiCameraActivity.overlayProxy = overLayProxy;
+		TiCameraActivity.whichCamera = whichCamera;
+		TiCameraActivity.setFlashMode(flashMode);
+		
+		//Create Intent and Launch
+		Activity activity = TiApplication.getInstance().getCurrentActivity();
+		Intent intent = new Intent(activity, TiCameraActivity.class);
+		activity.startActivity(intent);
 	}
 
+	@SuppressWarnings("unchecked")
+	@Kroll.method
+	public void showCamera(@SuppressWarnings("rawtypes") HashMap options)
+	{
+		KrollDict cameraOptions = null;
+		if ( (options == null) || !(options instanceof HashMap<?, ?>) ) {
+			if (Log.isDebugModeEnabled()) {
+				Log.d(TAG, "showCamera called with invalid options", Log.DEBUG_MODE);
+			}
+			return;
+		} else {
+			cameraOptions = new KrollDict(options);
+		}
+		
+		Object overlay = cameraOptions.get(PROP_OVERLAY);
+		
+		if ( (overlay != null) && (overlay instanceof TiViewProxy) ) {
+			launchCameraActivity(cameraOptions, (TiViewProxy)overlay);
+		} else {
+			launchNativeCamera(cameraOptions);
+		}
+	}
+
+	/*
+	 * Current implementation on Android limited to saving Images only to photo gallery
+	 */
+	@SuppressWarnings({ "unchecked", "rawtypes" })
+	@Kroll.method
+	public void saveToPhotoGallery(Object arg, @Kroll.argument(optional=true)HashMap callbackargs)
+	{
+		KrollFunction successCallback = null;
+		KrollFunction errorCallback = null;
+
+		KrollDict callbackDict = null;
+		
+		//Check for callbacks
+		if (callbackargs != null) {
+			callbackDict = new KrollDict(callbackargs);
+			if (callbackDict.containsKeyAndNotNull(TiC.PROPERTY_SUCCESS)) {
+				successCallback = (KrollFunction) callbackDict.get(TiC.PROPERTY_SUCCESS);
+			}
+			if (callbackDict.containsKeyAndNotNull(TiC.EVENT_ERROR)) {
+				errorCallback = (KrollFunction) callbackDict.get(TiC.EVENT_ERROR);
+			}
+		}
+		
+		//Validate arguments
+		boolean validType = ( (arg instanceof TiBlob) || (arg instanceof TiFileProxy) );
+		if (!validType) {
+			if (errorCallback != null) {
+				KrollDict response = new KrollDict();
+				response.putCodeAndMessage(UNKNOWN_ERROR, "Invalid type passed as argument");
+				errorCallback.callAsync(getKrollObject(), response);
+			}
+			return;
+		}
+		
+		TiBlob theBlob = null;
+		try {
+			//Make sure our processing argument is a Blob
+			if (arg instanceof TiFileProxy) {
+				theBlob = TiBlob.blobFromFile(((TiFileProxy)arg).getBaseFile());
+			} else {
+				theBlob = (TiBlob) arg;
+			}
+			
+			if ((theBlob.getWidth() == 0) || (theBlob.getHeight() == 0)) {
+				if (errorCallback != null) {
+					KrollDict response = new KrollDict();
+					response.putCodeAndMessage(UNKNOWN_ERROR,"Could not decode bitmap from argument");
+					errorCallback.callAsync(getKrollObject(), response);
+				}
+				return;
+			}
+			
+			BufferedInputStream bis = null;
+			BufferedOutputStream bos = null;
+			String extension = null;
+			if (theBlob.getType() == TiBlob.TYPE_IMAGE) {
+				Bitmap image = theBlob.getImage();
+				if (image.hasAlpha()) {
+					extension = ".png";
+				}else {
+					extension = ".jpg";
+				}
+			} else {
+				try {
+					String mimetype = theBlob.getMimeType();
+					extension = TiMimeTypeHelper.getFileExtensionFromMimeType(mimetype, ".jpg");
+				} catch(Throwable t) {
+					extension = null;
+				}
+			}
+			
+			
+			bis = new BufferedInputStream(theBlob.getInputStream());
+			
+			File imageFile = MediaModule.createGalleryImageFile(extension);
+			bos = new BufferedOutputStream(new FileOutputStream(imageFile));
+			byte[] buf = new byte[8096];
+			int len = 0;
+
+			while ((len = bis.read(buf)) != -1) {
+				bos.write(buf, 0, len);
+			}
+			if (bis != null) {
+				bis.close();
+				bis = null;
+			}
+			if (bos != null) {
+				bos.close();
+				bos = null;
+			}
+			
+			Intent mediaScanIntent = new Intent(Intent.ACTION_MEDIA_SCANNER_SCAN_FILE);
+			Uri contentUri = Uri.fromFile(imageFile);
+			mediaScanIntent.setData(contentUri);
+			Activity activity = TiApplication.getInstance().getCurrentActivity();
+			activity.sendBroadcast(mediaScanIntent);
+			
+			//All good. Dispatch success callback
+			if (successCallback != null) {
+				KrollDict response = new KrollDict();
+				response.putCodeAndMessage(NO_ERROR,null);
+				successCallback.callAsync(getKrollObject(), response);
+			}
+			
+		} catch(Throwable t) {
+			if (errorCallback != null) {
+				KrollDict response = new KrollDict();
+				response.putCodeAndMessage(UNKNOWN_ERROR,t.getMessage());
+				errorCallback.callAsync(getKrollObject(), response);
+			}
+		}
+	}
+	
 	@Kroll.method
 	public void hideCamera()
 	{
@@ -367,25 +422,7 @@ public class MediaModule extends KrollModule
 
 	}
 
-	/**
-	 * Object that is used to wrap required fields for async processing when invoking 
-	 * success, error , etc callbacks for camera
-	 */
-	private class CallbackWrapper
-	{
-		public TiBaseActivity callbackActivity;
-		public KrollFunction callback;
-		public KrollObject krollObject;
-		public KrollDict callbackArgs;
-
-		CallbackWrapper(TiBaseActivity callbackActivity, KrollFunction callback, KrollObject krollObject, KrollDict callbackArgs)
-		{
-			this.callbackActivity = callbackActivity;
-			this.callback = callback;
-			this.krollObject = krollObject;
-			this.callbackArgs = callbackArgs;
-		}
-	}
+	
 
 	/**
 	 * @see org.appcelerator.kroll.KrollProxy#handleMessage(android.os.Message)
@@ -393,19 +430,39 @@ public class MediaModule extends KrollModule
 	@Override
 	public boolean handleMessage(Message message)
 	{
-		switch (message.what) {
-			case MSG_INVOKE_CALLBACK: {
-				CallbackWrapper callbackWrapper = (CallbackWrapper) message.obj;
-				doInvokeCallback(callbackWrapper.callbackActivity, callbackWrapper.callback, callbackWrapper.krollObject, callbackWrapper.callbackArgs);
-
-				return true;
-			}
-		}
-
 		return super.handleMessage(message);
 	}
 
-	public static File createGalleryImageFile() {
+	protected static File createExternalStorageFile() {
+		return createExternalStorageFile(null);
+	}
+	protected static File createGalleryImageFile() {
+		return createGalleryImageFile(null);
+	}
+	
+	private static File createExternalStorageFile(String extension) {
+		File pictureDir = TiApplication.getInstance().getExternalFilesDir(Environment.DIRECTORY_PICTURES);
+		File appPictureDir = new File(pictureDir, TiApplication.getInstance().getAppInfo().getName());
+		if (!appPictureDir.exists()) {
+			if (!appPictureDir.mkdirs()) {
+				Log.e(TAG, "Failed to create external storage directory.");
+				return null;
+			}
+		}
+		String ext = (extension == null) ? ".jpg" : extension;
+		File imageFile;
+		try {
+			imageFile = TiFileHelper.getInstance().getTempFile(appPictureDir, ext, false);
+
+		} catch (IOException e) {
+			Log.e(TAG, "Failed to create image file: " + e.getMessage());
+			return null;
+		}
+
+		return imageFile;
+	}
+	
+	private static File createGalleryImageFile(String extension) {
 		File pictureDir = Environment.getExternalStoragePublicDirectory(Environment.DIRECTORY_PICTURES);
 		File appPictureDir = new File(pictureDir, TiApplication.getInstance().getAppInfo().getName());
 		if (!appPictureDir.exists()) {
@@ -414,10 +471,10 @@ public class MediaModule extends KrollModule
 				return null;
 			}
 		}
-
+		String ext = (extension == null) ? ".jpg" : extension;
 		File imageFile;
 		try {
-			imageFile = TiFileHelper.getInstance().getTempFile(appPictureDir, ".jpg", false);
+			imageFile = TiFileHelper.getInstance().getTempFile(appPictureDir, ext, false);
 
 		} catch (IOException e) {
 			Log.e(TAG, "Failed to create gallery image file: " + e.getMessage());
@@ -427,40 +484,129 @@ public class MediaModule extends KrollModule
 		return imageFile;
 	}
 
-	private void invokeCallback(TiBaseActivity callbackActivity, KrollFunction callback, KrollObject krollObject, KrollDict callbackArgs)
-	{
-		if (KrollRuntime.getInstance().isRuntimeThread()) {
-			doInvokeCallback(callbackActivity, callback, krollObject, callbackArgs);
-
-		} else {
-			CallbackWrapper callbackWrapper = new CallbackWrapper(callbackActivity, callback, krollObject, callbackArgs);
-			Message message = getRuntimeHandler().obtainMessage(MSG_INVOKE_CALLBACK, callbackWrapper);
-			message.sendToTarget();
-		}
-	}
-
-	private void doInvokeCallback(TiBaseActivity callbackActivity, KrollFunction callback, KrollObject krollObject, KrollDict callbackArgs)
-	{
-		if (callbackActivity.isResumed) {
-			callback.callAsync(krollObject, callbackArgs);
-
-		} else {
-			CallbackWrapper callbackWrapper = new CallbackWrapper(callbackActivity, callback, krollObject, callbackArgs);
-			Message message = getRuntimeHandler().obtainMessage(MSG_INVOKE_CALLBACK, callbackWrapper);
-			message.sendToTarget();
-		}
-	}
-
 	protected class CameraResultHandler implements TiActivityResultHandler, Runnable
 	{
 		protected File imageFile;
-		protected String imageUrl;
 		protected boolean saveToPhotoGallery;
 		protected int code;
 		protected KrollFunction successCallback, cancelCallback, errorCallback;
 		protected TiActivitySupport activitySupport;
 		protected Intent cameraIntent;
-		protected String dateTaken_lastImageInExternalContentURI;
+		protected int lastImageId;
+		private boolean validFileCreated;
+
+		//Validates if the file is a valid bitmap
+		private void validateFile() throws Throwable
+		{
+			try {
+				BitmapFactory.Options opts = new BitmapFactory.Options();
+				opts.inJustDecodeBounds = true;
+				
+				BitmapFactory.decodeStream(new FileInputStream(imageFile), null, opts);
+				if (opts.outWidth == -1 || opts.outHeight == -1) {
+					throw new Exception("Could not decode the bitmap from imageFile");
+				}
+			} catch (Throwable t) {
+				Log.e(TAG, t.getMessage());
+				throw t;
+			}
+		}
+		
+		//Cleanup duplicates if possible.
+		private void checkAndDeleteDuplicate(Activity activity)
+		{
+			if (lastImageId != -1) {
+				final String[] imageColumns = { MediaStore.Images.Media.DATA, MediaStore.Images.Media._ID };
+				final String imageOrderBy = MediaStore.Images.Media._ID+" DESC";
+				final String imageWhere = MediaStore.Images.Media._ID+">?";
+				final String[] imageArguments = { Integer.toString(lastImageId) };
+				Cursor imageCursor = activity.getContentResolver().query(MediaStore.Images.Media.EXTERNAL_CONTENT_URI, imageColumns, imageWhere, imageArguments, imageOrderBy);
+				String refPath = imageFile.getAbsolutePath();
+				if (imageCursor == null) {
+					Log.e(TAG, "Could not load image cursor. Can not check and delete duplicates");
+					return;
+				}
+				if (imageCursor.getCount()>0){
+					
+					if (!validFileCreated) {
+						try {
+							imageFile.delete();
+						} catch (Throwable t) {
+							//Ignore error
+						}
+						
+						imageFile = saveToPhotoGallery? MediaModule.createGalleryImageFile() : MediaModule.createExternalStorageFile();
+					}
+					
+					long compareLength = (validFileCreated) ? imageFile.length() : 0;
+					
+					while(imageCursor.moveToNext()){
+						int id = imageCursor.getInt(imageCursor.getColumnIndex(MediaStore.Images.Media._ID));
+						String path = imageCursor.getString(imageCursor.getColumnIndex(MediaStore.Images.Media.DATA));
+				        
+						if (!validFileCreated) {
+							//If file is invalid we will copy over the last image in the gallery
+							if (imageFile != null) {
+								try {
+									File srcFile = new File(path);
+									copyFile(srcFile, imageFile);
+									validFileCreated = true;
+									refPath = imageFile.getAbsolutePath();
+									compareLength = imageFile.length();
+								} catch(Throwable t) {
+									//Ignore this error. It will be caught on the next pass to validateFile.
+								}
+							} 
+						}
+
+						if (!path.equalsIgnoreCase(refPath)) {
+							File compareFile = new File(path);
+							long fileLength = compareFile.length();
+
+							if (compareFile.length() == compareLength) {
+								//Same file length
+								int result = activity.getContentResolver().delete(MediaStore.Images.Media.EXTERNAL_CONTENT_URI, MediaStore.Images.Media._ID + "=?", new String[]{ Integer.toString(id) } );
+								if (result == 1) {
+									if (Log.isDebugModeEnabled()) {
+										Log.d(TAG, "Deleting possible duplicate at "+path+" with id "+id, Log.DEBUG_MODE);
+									}
+								} else {
+									if (Log.isDebugModeEnabled()) {
+										Log.d(TAG, "Could not delete possible duplicate at "+path+" with id "+id, Log.DEBUG_MODE);
+									}
+								}
+							} else {
+								if (Log.isDebugModeEnabled()) {
+									Log.d(TAG, "Ignoring file as not a duplicate at path "+path+" with id "+id+". Different Sizes "+fileLength+" "+compareLength, Log.DEBUG_MODE);
+								}
+							}
+						}
+					}
+				}
+				imageCursor.close();
+			}
+		}
+		
+		//Copies files over using Buffered Streams.
+		private void copyFile(File source, File destination) throws Throwable {
+			BufferedInputStream bis = new BufferedInputStream(new FileInputStream(source));
+			BufferedOutputStream bos = new BufferedOutputStream(new FileOutputStream(destination));
+			byte[] buf = new byte[8096];
+			int len = 0;
+
+			while ((len = bis.read(buf)) != -1) {
+				bos.write(buf, 0, len);
+			}
+			
+			if (bis != null) {
+				bis.close();
+				bis = null;
+			}
+			if (bos != null) {
+				bos.close();
+				bos = null;
+			}
+		}
 
 		@Override
 		public void run()
@@ -468,216 +614,105 @@ public class MediaModule extends KrollModule
 			code = activitySupport.getUniqueResultCode();
 			activitySupport.launchActivityForResult(cameraIntent, code, this);
 		}
-
+		
 		@Override
 		public void onResult(Activity activity, int requestCode, int resultCode, Intent data)
 		{
-			if (resultCode == Activity.RESULT_CANCELED) {
-				if (imageFile != null) {
-					imageFile.delete();
-				}
-				if (cancelCallback != null) {
-					KrollDict response = new KrollDict();
-					response.putCodeAndMessage(NO_ERROR, null);
-					cancelCallback.callAsync(getKrollObject(), response);
-				}
-
-			} else {
-				// If data is null, the image is not automatically saved to the gallery, so we need to process it with
-				// the one we created
-				if (data == null) {
-					processImage(activity);
-
-				} else {
-					// Get the content information about the saved image
-					String[] projection = {
-						Images.Media.TITLE,
-						Images.Media.DISPLAY_NAME,
-						Images.Media.MIME_TYPE,
-						Images.ImageColumns.BUCKET_ID,
-						Images.ImageColumns.BUCKET_DISPLAY_NAME,
-						MediaColumns.DATA,
-						Images.ImageColumns.DATE_TAKEN
-					};
-
-					String title = null;
-					String displayName = null;
-					String mimeType = null;
-					String bucketId = null;
-					String bucketDisplayName = null;
-					String dataPath = null;
-					String dateTaken = null;
-
-					Cursor c = null;
-					boolean isDataValid = true;
-					boolean isQueriedPhotoValid = true;
-					Uri uriData = data.getData();
-					if (uriData != null) {
-						c = activity.getContentResolver().query(uriData, projection, null, null, null);
+			if (requestCode == code) {
+				if (resultCode == Activity.RESULT_OK) {
+					
+					validFileCreated = true;
+					try {
+						validateFile();
+					} catch(Throwable t) {
+						validFileCreated = false;
 					}
-					if (c == null) {
-						c = activity.getContentResolver().query(Images.Media.EXTERNAL_CONTENT_URI, projection, null, null,
-							Images.ImageColumns.DATE_TAKEN);
-						isDataValid = false;
+					
+					
+					checkAndDeleteDuplicate(activity);
+
+					try {
+						validateFile();
+					} catch(Throwable t) {
+						if (errorCallback != null) {
+							KrollDict response = new KrollDict();
+							response.putCodeAndMessage(UNKNOWN_ERROR, t.getMessage());
+							errorCallback.callAsync(getKrollObject(), response);
+						}
+						return;
 					}
-					if (c != null) {
+					
+					
+					if (!saveToPhotoGallery) {
+						//Create a temporary file in cache and delete the original file
 						try {
-							boolean isCursorValid = false;
-							if (uriData != null && isDataValid) {
-								isCursorValid = c.moveToNext();
-							} else {
-								isCursorValid = c.moveToLast();
-							}
-							if (isCursorValid) {
-								title = c.getString(0);
-								displayName = c.getString(1);
-								mimeType = c.getString(2);
-								bucketId = c.getString(3);
-								bucketDisplayName = c.getString(4);
-								dataPath = c.getString(5);
-								dateTaken = c.getString(6);
-								
-								if (!isDataValid && dateTaken.equals(dateTaken_lastImageInExternalContentURI)) {
-									isQueriedPhotoValid = false;
-								}
+							File tempFile = TiApplication.getInstance().getTempFileHelper().createTempFile("tia", ".jpg");
+							copyFile(imageFile, tempFile);
+							imageFile.delete();
+							imageFile = tempFile;
 
-								Log.d(TAG, "Image { title: " + title + " displayName: " + displayName + " mimeType: "
-									+ mimeType + " bucketId: " + bucketId + " bucketDisplayName: " + bucketDisplayName
-									+ " path: " + dataPath + " }", Log.DEBUG_MODE);
+						} catch(Throwable t) {
+							if (errorCallback != null) {
+								KrollDict response = new KrollDict();
+								response.putCodeAndMessage(UNKNOWN_ERROR, t.getMessage());
+								errorCallback.callAsync(getKrollObject(), response);
 							}
-						} finally {
-							c.close();
-							c = null;
+							return;
 						}
 					} else {
-						// If we can't get query the image, process it from the imageFile
-						processImage(activity);
-						return;
+						//Send out broadcast to add to image gallery
+						Intent mediaScanIntent = new Intent(Intent.ACTION_MEDIA_SCANNER_SCAN_FILE);
+						Uri contentUri = Uri.fromFile(imageFile);
+						mediaScanIntent.setData(contentUri);
+						activity.sendBroadcast(mediaScanIntent);
 					}
-					if (!isQueriedPhotoValid) {
-						// If the queried image is not the one we just captured, process it from the imageFile
-						processImage(activity);
-						return;
-					}
-
-					String localImageUrl = dataPath;
-					URL url;
+					
+					//Create a blob for response
 					try {
-						if (!saveToPhotoGallery) {
-							// We need to move the image from dataPath to the temp file which will be deleted
-							// when the app exits.
-							url = new URL(imageUrl);
-							moveImage(dataPath, url.getPath());
-
-							// Delete the saved the image entry from the gallery DB.
-							if (uriData != null && isDataValid) {
-								activity.getContentResolver().delete(uriData, null, null);
-							} else {
-								activity.getContentResolver().delete(Images.Media.EXTERNAL_CONTENT_URI, "datetaken = ?", new String[] { dateTaken });
-							}
-
-							localImageUrl = imageUrl; // make sure it's a good URL before setting it to pass back.
-						} else if (imageUrl != null) {
-							// Delete the temp file since we want to use the one from the photo gallery
-							url = new URL(imageUrl);
-							File source = new File(url.getPath());
-							source.delete();
+						TiFile theFile = new TiFile(imageFile, imageFile.toURI().toURL().toExternalForm(), false);
+						TiBlob theBlob = TiBlob.blobFromFile(theFile);
+						KrollDict response = MediaModule.createDictForImage(theBlob, theBlob.getMimeType());
+						if (successCallback != null) {
+							successCallback.callAsync(getKrollObject(), response);
 						}
-					} catch (MalformedURLException e) {
-						Log.e(TAG, "Invalid URL not moving image: " + e.getMessage());
-
+					} catch (Throwable t) {
+						if (errorCallback != null) {
+							KrollDict response = new KrollDict();
+							response.putCodeAndMessage(UNKNOWN_ERROR, t.getMessage());
+							errorCallback.callAsync(getKrollObject(), response);
+						}
+						return;
 					}
-					invokeSuccessCallback(activity, localImageUrl);
-				}
-			}
-		}
-
-		private void moveImage(String source, String dest)
-		{
-			try {
-
-				BufferedInputStream bis = null;
-				BufferedOutputStream bos = null;
-
-				File src = new File(source);
-				File dst = new File(dest);
-
-				try {
-					bis = new BufferedInputStream(new FileInputStream(src), 8096);
-					bos = new BufferedOutputStream(new FileOutputStream(dst), 8096);
-
-					byte[] buf = new byte[8096];
-					int len = 0;
-
-					while ((len = bis.read(buf)) != -1) {
-						bos.write(buf, 0, len);
+					
+				} else {
+					//Delete the file
+					if (imageFile != null) {
+						imageFile.delete();
 					}
-
-				} finally {
-					if (bis != null) {
-						bis.close();
-					}
-
-					if (bos != null) {
-						bos.close();
+					if (resultCode == Activity.RESULT_CANCELED) {
+						if (cancelCallback != null) {
+							KrollDict response = new KrollDict();
+							response.putCodeAndMessage(NO_ERROR, null);
+							cancelCallback.callAsync(getKrollObject(), response);
+						}
+					} else {
+						//Assume error
+						if (errorCallback != null) {
+							KrollDict response = new KrollDict();
+							response.putCodeAndMessage(UNKNOWN_ERROR, null);
+							errorCallback.callAsync(getKrollObject(), response);
+						}
 					}
 				}
-				src.delete();
-
-			} catch (IOException e) {
-				Log.e(TAG, "Unable to move file: " + e.getMessage(), e);
 			}
-		}
-
-		@SuppressLint("DefaultLocale")
-		private void processImage(Activity activity)
-		{
-			String localUrl = imageUrl;
-			String localPath = imageFile.getAbsolutePath();
-
-			if (saveToPhotoGallery) {
-				ContentValues values = new ContentValues(7);
-				values.put(Images.Media.TITLE, imageFile.getName());
-				values.put(Images.Media.DISPLAY_NAME, imageFile.getName());
-				values.put(Images.Media.DATE_TAKEN, new Date().getTime());
-				values.put(Images.Media.MIME_TYPE, "image/jpeg");
-
-				File rootsd = Environment.getExternalStorageDirectory();
-				localPath = rootsd.getAbsolutePath() + "/dcim/Camera/" + imageFile.getName();
-				values.put(Images.ImageColumns.BUCKET_ID, localPath.toLowerCase().hashCode());
-				values.put(Images.ImageColumns.BUCKET_DISPLAY_NAME, "Camera");
-				moveImage(imageFile.getAbsolutePath(), localPath);
-				localUrl = "file://" + localPath;
-
-				values.put("_data", localPath);
-
-				activity.getContentResolver().insert(Images.Media.EXTERNAL_CONTENT_URI, values);
-
-				// puts newly captured photo into the gallery
-				MediaScannerClient mediaScanner = new MediaScannerClient(activity, new String[] { localUrl }, null, null);
-				mediaScanner.scan();
-			}
-			invokeSuccessCallback(activity, localPath);
-		}
-
-		private void invokeSuccessCallback(Activity activity, String localImageUrl)
-		{
-			try {
-				if (successCallback != null) {
-					invokeCallback((TiBaseActivity) activity, successCallback, getKrollObject(), createDictForImage(localImageUrl, "image/jpeg"));
-				}
-
-			} catch (OutOfMemoryError e) {
-				String msg = "Not enough memory to get image: " + e.getMessage();
-				Log.e(TAG, msg);
-				if (errorCallback != null) {
-					invokeCallback((TiBaseActivity) activity, errorCallback, getKrollObject(), createErrorResponse(UNKNOWN_ERROR, msg));
-				}
-			}
+			
 		}
 
 		@Override
 		public void onError(Activity activity, int requestCode, Exception e) {
+			if (requestCode != code) {
+				return;
+			}
 			if (imageFile != null) {
 				imageFile.delete();
 			}
@@ -710,14 +745,14 @@ public class MediaModule extends KrollModule
 		KrollFunction cancelCallback = null;
 		KrollFunction errorCallback = null;
 
-		if (options.containsKey("success")) {
-			successCallback = (KrollFunction) options.get("success");
+		if (options.containsKey(TiC.PROPERTY_SUCCESS)) {
+			successCallback = (KrollFunction) options.get(TiC.PROPERTY_SUCCESS);
 		}
-		if (options.containsKey("cancel")) {
-			cancelCallback = (KrollFunction) options.get("cancel");
+		if (options.containsKey(TiC.PROPERTY_CANCEL)) {
+			cancelCallback = (KrollFunction) options.get(TiC.PROPERTY_CANCEL);
 		}
-		if (options.containsKey("error")) {
-			errorCallback = (KrollFunction) options.get("error");
+		if (options.containsKey(TiC.EVENT_ERROR)) {
+			errorCallback = (KrollFunction) options.get(TiC.EVENT_ERROR);
 		}
 
 		final KrollFunction fSuccessCallback = successCallback;
@@ -741,6 +776,9 @@ public class MediaModule extends KrollModule
 
 				public void onResult(Activity activity, int requestCode, int resultCode, Intent data)
 				{
+					if (requestCode != code) {
+						return;
+					}
 					Log.e(TAG, "OnResult called: " + resultCode);
 					if (resultCode == Activity.RESULT_CANCELED) {
 						if (fCancelCallback != null) {
@@ -768,6 +806,9 @@ public class MediaModule extends KrollModule
 
 				public void onError(Activity activity, int requestCode, Exception e)
 				{
+					if (requestCode != code) {
+						return;
+					}
 					String msg = "Gallery problem: " + e.getMessage();
 					Log.e(TAG, msg, e);
 					if (fErrorCallback != null) {
@@ -777,13 +818,13 @@ public class MediaModule extends KrollModule
 			});
 	}
 
-	public static KrollDict createDictForImage(String path, String mimeType) {
+	protected static KrollDict createDictForImage(String path, String mimeType) {
 		String[] parts = { path };
 		TiBlob imageData = TiBlob.blobFromFile(TiFileFactory.createTitaniumFile(parts, false), mimeType);
 		return createDictForImage(imageData, mimeType);
 	}
 
-	public static KrollDict createDictForImage(TiBlob imageData, String mimeType) {
+	protected static KrollDict createDictForImage(TiBlob imageData, String mimeType) {
 		KrollDict d = new KrollDict();
 		d.putCodeAndMessage(NO_ERROR, null);
 
@@ -851,11 +892,11 @@ public class MediaModule extends KrollModule
 		KrollFunction errorCallback = null;
 		TiBlob image = null;
 
-		if (options.containsKey("success")) {
-			successCallback = (KrollFunction) options.get("success");
+		if (options.containsKey(TiC.PROPERTY_SUCCESS)) {
+			successCallback = (KrollFunction) options.get(TiC.PROPERTY_SUCCESS);
 		}
-		if (options.containsKey("error")) {
-			errorCallback = (KrollFunction) options.get("error");
+		if (options.containsKey(TiC.EVENT_ERROR)) {
+			errorCallback = (KrollFunction) options.get(TiC.EVENT_ERROR);
 		}
 		if (options.containsKey("image")) {
 			image = (TiBlob) options.get("image");
@@ -894,6 +935,9 @@ public class MediaModule extends KrollModule
 
 				public void onResult(Activity activity, int requestCode, int resultCode, Intent data)
 				{
+					if (requestCode != code) {
+						return;
+					}
 					Log.e(TAG, "OnResult called: " + resultCode);
 					if (fSuccessCallback != null) {
 						KrollDict response = new KrollDict();
@@ -904,6 +948,9 @@ public class MediaModule extends KrollModule
 
 				public void onError(Activity activity, int requestCode, Exception e)
 				{
+					if (requestCode != code) {
+						return;
+					}
 					String msg = "Gallery problem: " + e.getMessage();
 					Log.e(TAG, msg, e);
 					if (fErrorCallback != null) {
